--- a/config.yml
+++ b/config.yml
@@ -1,27 +1,56 @@
-version: 1
 validation: sovereign
-default_denom: unimo
-accounts: 
-- name: alice
-  coins:
-  - 20000token
-  - 200000000unimo
-- name: bob
-  coins:
-  - 10000token
-  - 100000000unimo
-client:
-  openapi:
-    path: docs/static/openapi.json
+version: 1
+build:
+    proto:
+        path: proto
+accounts:
+    - name: alice
+      coins:
+        - 1000000000000000000unimo
+    - name: bob
+      coins:
+        - 10000token
+        - 100000000unimo
 faucet:
-  name: bob
-  coins:
-  - 5token
-  - 100000stake
+    name: bob
+    coins:
+        - 5token
+        - 100000stake
+    host: 0.0.0.0:4500
+client:
+    openapi:
+        path: docs/static/openapi.json
+default_denom: unimo
 validators:
-- name: alice
-  bonded: 100000000unimo
-- name: validator1
-  bonded: 200000000unimo
-- name: validator2
-  bonded: 100000000unimo
+    - name: alice
+      bonded: 1000000000000000000unimo
+    - name: validator1
+      bonded: 200000000unimo
+      app:
+        api:
+            address: 0.0.0.0:1327
+        grpc:
+            address: 0.0.0.0:9100
+        grpc-web:
+            address: 0.0.0.0:9101
+      config:
+        p2p:
+            laddr: 0.0.0.0:26666
+        rpc:
+            laddr: 0.0.0.0:26667
+            pprof_laddr: 0.0.0.0:6070
+    - name: validator2
+      bonded: 100000000unimo
+      app:
+        api:
+            address: 0.0.0.0:1337
+        grpc:
+            address: 0.0.0.0:9110
+        grpc-web:
+            address: 0.0.0.0:9111
+      config:
+        p2p:
+            laddr: 0.0.0.0:26676
+        rpc:
+            laddr: 0.0.0.0:26677
+            pprof_laddr: 0.0.0.0:6080
