feat(tokenfactory): implement tokenfactory module with denom creation, minting, and ownership management
This commit introduces a new tokenfactory module that allows:
- Creating and managing custom denoms with configurable parameters
- Minting and sending tokens of created denoms
- Transferring ownership of denoms
- Querying denom information and parameters
- Governance-controlled parameter updates

The module includes:
- Keeper with denom and params storage
- Message handlers for all operations
- Query service for denom and params
- Genesis state management
- CLI and REST interfaces
- Unit tests for all functionality

--- a/buf.yaml
+++ b/buf.yaml
@@ -12,6 +12,9 @@ deps:
     - buf.build/googleapis/googleapis
     - buf.build/protocolbuffers/wellknowntypes
     - buf.build/cosmos/ibc
+    - buf.build/cosmwasm/wasmd
+    - buf.build/evmos/evmos
+    - buf.build/cosmos/evm
 lint:
     disallow_comment_ignores: true
     except:
