feat: integrate gnovm module into app configuration and ante handler
- Add gnovm module to igniteapps.yml and app configuration
- Implement gnovm ante handler and update existing ante handler logic
- Update dependencies including go version and gnovm module

--- a/igniteapps.yml
+++ b/igniteapps.yml
@@ -2,3 +2,4 @@ apps:
     - path: github.com/ignite/apps/evm@evm/v0.1.2
     - path: github.com/ignite/apps/wasm
     - path: github.com/ignite/apps/explorer
+    - path: github.com/ignite/apps/gnovm
